[workspace]
members = [
    "crates/oan-core",
    "crates/oan-did-ans",
    "crates/oan-crypto",
    "crates/oan-credentials",
    "crates/oan-bulletin",
    "crates/oan-package",
    "crates/oan-storage",
    "crates/oan-protocol",
    "crates/oan-client",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/wolfbrother/oan-protocol-common"
version = "0.1.0"

[workspace.dependencies]
base64 = "0.22"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hex = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signature = "2"
sm2 = { version = "0.14.0-rc.9", features = ["dsa", "serde"] }
sm3 = "0.5"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
