[package]
name = "oan-credentials"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
ed25519-dalek.workspace = true
oan-core = { path = "../oan-core" }
oan-crypto = { path = "../oan-crypto" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
