[package]
name = "oan-crypto"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
bs58.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
oan-core = { path = "../oan-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sm2.workspace = true
sm3.workspace = true
thiserror.workspace = true
