[package]
name = "oan-storage"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
